# oitester

background/executor/: .gitignore  Makefile.am  configure.ac  doxygen.cfg
background/executor/doc/: .gitignore  Makefile.am  README
background/executor/include/: compiler.hh  logger.hh  monitor.hh
background/executor/src/: .gitignore  Makefile.am  compiler.cc  logger.cc  main.cc  monitor.cc
background/judge/: .gitignore  executor  installer.py  server.py  tester.py
background/judge/doc/: README.md
background/judge/src/AC/: 1.cpp
background/judge/src/MLE/: 1.cpp
background/judge/src/OLE/: 1.cpp
background/judge/src/RE/: 1.cpp
background/judge/src/TLE/: 1.cpp
background/judge/src/WA/: 1.cpp
background/judge/src/default/: 1.cpp
website/local_tester/: .rvmrc  Gemfile  README.md
website/local_tester/app/controllers/: contests_controller.rb  problems_controller.rb  submissions_controller.rb
website/local_tester/app/helpers/: contests_helper.rb
website/local_tester/app/models/: contest.rb  problem.rb  submission.rb
website/local_tester/app/uploaders/: data_uploader.rb
website/local_tester/config/: application.rb  routes.rb  secrets.yml
website/local_tester/config/initializers/: my_constants.rb  session_store.rb
website/local_tester/db/: schema.rb
website/local_tester/db/migrate/: 20140522143210_create_solutions.rb  20140522143211_create_submissions.rb  20140522143214_add_time_cost_to_submissions.rb  20140522143215_add_memory_cost_to_submissions.rb  20140522143216_add_title_to_solutions.rb  20140522143217_add_content_to_solutions.rb  (+10 more)
(+21 files in other folders)
